answere the theory questions

--- a/assignment1_colab/assignment1/knn.ipynb
+++ b/assignment1_colab/assignment1/knn.ipynb
@@ -393,7 +393,12 @@
     "- What in the data is the cause behind the distinctly bright rows?\n",
     "- What causes the columns?\n",
     "\n",
-    "$\\color{blue}{\\textit Your Answer:}$ *fill this in.*\n",
+    "$\\color{blue}{\\textit Your Answer:}$ *\n",
+    "1. First of all our dists variable is a matrix of distance between testing and training images ith index shows test image which rows and jth index shows traing images  so these indexes pixeles valuese are show in plot. \n",
+    "\n",
+    "2. We can know by code is that all rows are testing images and all rows are training images. so actually if we see to \"compute_distances_two_loops\" so here we impliment two loop one is inner and other is outer. In outer loop we take a test images and compare with all images \n",
+    "3. so as much distance shows by white color closses to 255 pixels value and less value shows black closses to 0.  \n",
+    "*\n",
     "\n"
    ]
   },
@@ -483,10 +488,70 @@
     "5. Rotating the coordinate axes of the data, which means rotating all the images by the same angle. Empty regions in the image caused by rotation are padded with a same pixel value and no interpolation is performed.\n",
     "\n",
     "$\\color{blue}{\\textit Your Answer:}$\n",
+    "1. Subtracting the mean $\\mu$ ($\\tilde{p}_{ij}^{(k)}=p_{ij}^{(k)}-\\mu$.)\n",
+    "2. Subtracting the per pixel mean $\\mu_{ij}$  ($\\tilde{p}_{ij}^{(k)}=p_{ij}^{(k)}-\\mu_{ij}$.)\n",
+    "3. Subtracting the mean $\\mu$ and dividing by the standard deviation $\\sigma$.\n",
     "\n",
+    "$\\color{blue}{\\textit Your Explanation:}$\n",
     "\n",
-    "$\\color{blue}{\\textit Your Explanation:}$\n"
+    "First of all I would like to define notations or assumption that we use in it.\n",
+    "suppose $p^k$ is a vector flatten matrix of image's pixel $I_k$ total pixel in flatten matrix are $S = h*w$ values where each entry is $p^k_m$ in $p^k$ corresponds to each entry $p^k_{ij}$\n",
+    " in $I_k$.\n",
+    "\n",
+    " Let's remember how $L1$ is calculated between 2 pixel vectors belonging to different images:\n",
+    "\n",
+    "$$d_1\\left(\\mathbf{p}^{(k)}, \\mathbf{p}^{(k')}\\right)=\\left|\\left|\\mathbf{p}^{(k)}-\\mathbf{p}^{(k')}\\right|\\right|_{1}$$\n",
+    "\n",
+    "where $L1$ norm is expressed as $||-||_{1}$ and calculated as follows:\n",
+    "\n",
+    "$$\\left|\\left|\\mathbf{p}^{(k)}-\\mathbf{p}^{(k')}\\right|\\right|_{1}=\\sum_{m=1}^{S}\\left|p_m^{(k)}-p_m^{(k')}\\right|$$\n",
+    "\n",
+    "Since distances are computed between pixels element-wise, it can be derived that only the last preprocessing step could change the $L1$ distance, thus the classifier performance:\n",
+    "1. **Mean subtraction**\n",
+    "    * _Formula_: $\\sum_{m=1}^{S}\\left|\\left(p_m^{(k)}-\\mu\\right)-\\left(p_m^{(k')}-\\mu\\right)\\right|$\n",
+    "    * _Explanation_: it can be seen that $\\mu$ will cancel out during distance computation because both pixel values are modified by the same constant.\n",
+    "2. **Per-pixel mean subtraction**\n",
+    "    * _Formula_: $\\sum_{m=1}^{S}\\left|\\left(p_m^{(k)}-\\mu_m\\right)-\\left(p_m^{(k')}-\\mu_m\\right)\\right|$\n",
+    "    * _Explanation_: same as `1`\n",
+    "3. **Standartization**\n",
+    "    * _Formula_: $\\sum_{m=1}^{S}\\left|\\frac{p_m^{(k)}-\\mu}{\\sigma}-\\frac{p_m^{(k')}-\\mu}{\\sigma}\\right|$\n",
+    "    * _Explanation_: it can be seen that $\\sigma^{-1}$ is a constant by which each absolute difference is weighted. The constant for all the differences is the same, therefore, each distance is scaled by the same amount. This means that the performance is unaffected because the distance comparisons will remain the same (just on a different scale)\n",
+    "4. **Per-pixel standartization**\n",
+    "    * _Formula_: $\\sum_{m=1}^{S}\\left|\\frac{p_m^{(k)}-\\mu_m}{\\sigma_m}-\\frac{p_m^{(k')}-\\mu_m}{\\sigma_m}\\right|$\n",
+    "    * _Explanation_: it can be seen that $\\sigma_m^{-1}$ is a constant by which each absolute difference is weighted. The constant is different for every difference, therefore, some differences can become more prominent than they originally were while computing some $L1$, whereas the same constants may have not much affect on the differences when computing some other $L1$.\n",
+    "    * _Example_: assume $\\mathbf{p}^{(k)}=\\begin{bmatrix}0 \\\\ 0\\end{bmatrix}$, $\\mathbf{p}^{(k')}=\\begin{bmatrix}0 \\\\ 0.9\\end{bmatrix}$, $\\mathbf{p}^{(k'')}=\\begin{bmatrix}1 \\\\ 0.1\\end{bmatrix}$, and $\\bm{\\sigma}=\\begin{bmatrix} 1 \\\\ 0.1\\end{bmatrix}$.\n",
+    "        \n",
+    "        The following distances are acquired before scaling:\n",
+    "        * $d_1\\left(\\mathbf{p}^{(k)}, \\mathbf{p}^{(k')}\\right) = 0 + 0.9 = 0.9$\n",
+    "        * $d_1\\left(\\mathbf{p}^{(k)}, \\mathbf{p}^{(k'')}\\right) = 1 + 0.1 = 1.1$\n",
+    "    \n",
+    "        And the following distances are acquired after scaling:\n",
+    "        * $d_1\\left(\\mathbf{p}^{(k)}, \\mathbf{p}^{(k')}\\right) = 1 \\cdot 0 + 10 \\cdot 0.9 = 10$\n",
+    "        * $d_1\\left(\\mathbf{p}^{(k)}, \\mathbf{p}^{(k'')}\\right) = 1 \\cdot 1 + 10 \\cdot 0.1 = 2$\n",
+    "\n",
+    "        And we can see that before scaling $d_1\\left(\\mathbf{p}^{(k)}, \\mathbf{p}^{(k')}\\right) < d_1\\left(\\mathbf{p}^{(k)}, \\mathbf{p}^{(k'')}\\right)$ but after scaling $d_1\\left(\\mathbf{p}^{(k)}, \\mathbf{p}^{(k')}\\right) > d_1\\left(\\mathbf{p}^{(k)}, \\mathbf{p}^{(k'')}\\right)$.\n",
+    "\n",
+    "5. **Rotation**\n",
+    "    * _Formula_: $||R\\mathbf{p}^{(k)}-R\\mathbf{p}^{(k')}||_1$\n",
+    "    * _Explanation_: the formula shows that applying the rotation to a vector is the same as transforming its space while preserving its distances between points (source: [wikipedia](https://en.wikipedia.org/wiki/Rotation_matrix#Geometry)). This, however, means that the transformation of some axis depends on another axis within the same space and not on some constant like it did in the previous cases. Therefore, the distance between 2 points of 2 different vectors in the same dimension after transformation will differ because the (unnormalized) basis for the 2 vector spaces are (usually) different.\n",
+    "    * _Example_: assume $\\mathbf{p}^{(k)}=\\begin{bmatrix}1 \\\\ 0\\end{bmatrix}$, $\\mathbf{p}^{(k')}=\\begin{bmatrix}1 \\\\ 1\\end{bmatrix}$, $\\mathbf{p}^{(k'')}=\\begin{bmatrix}2 \\\\ 2\\end{bmatrix}$, and $R=\\begin{bmatrix}\\cos(\\pi) & -\\sin(\\pi) \\\\ \\sin(\\pi) & \\cos(\\pi)\\end{bmatrix}=\\begin{bmatrix}0 & -1 \\\\ 1 & 0\\end{bmatrix}$\n",
+    "\n",
+    "        The following distances are acquired before rotating:\n",
+    "        * $d_1\\left(\\mathbf{p}^{(k)}, \\mathbf{p}^{(k')}\\right) = 0 + 1 = 1$\n",
+    "        * $d_1\\left(\\mathbf{p}^{(k)}, \\mathbf{p}^{(k'')}\\right) = 1 + 2 = 3$\n",
+    "\n",
+    "        And the following distances are acquired after rotating:\n",
+    "        * $d_1\\left(\\mathbf{p}^{(k)}, \\mathbf{p}^{(k')}\\right) = 1 + 2 = 3$\n",
+    "        * $d_1\\left(\\mathbf{p}^{(k)}, \\mathbf{p}^{(k'')}\\right) = 0 + 1 = 1$\n",
+    "\n",
+    "      And we can see that before rotating $d_1\\left(\\mathbf{p}^{(k)}, \\mathbf{p}^{(k')}\\right) < d_1\\left(\\mathbf{p}^{(k)}, \\mathbf{p}^{(k'')}\\right)$ but after rotating $d_1\\left(\\mathbf{p}^{(k)}, \\mathbf{p}^{(k')}\\right) > d_1\\left(\\mathbf{p}^{(k)}, \\mathbf{p}^{(k'')}\\right)$."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c5905de",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -951,10 +1016,13 @@
     "5. None of the above.\n",
     "\n",
     "$\\color{blue}{\\textit Your Answer:}$\n",
-    "\n",
+    "True statements: `2`, `4`\n",
     "\n",
     "$\\color{blue}{\\textit Your Explanation:}$\n",
-    "\n"
+    "1. False not necessory decision boundary of knn will be linear . some time data set too complex not linearly or hyperlan sperate it. so decision boundary might be non-linear.\n",
+    "2. True The training error of 1 NN not significantly accure because just memorize training data. But when we cosider 5 NN so error will be more than one NN because consider 5 nearest neighbour.\n",
+    "3. False the test error will not be gurranteed lower than 1 NN from 5 NN. Because \n",
+    "4. TRUE: during test time, each test sample is compared against every training sample, therefore, increasing the training set would result in more comparisons which means longer test time.\n"
    ]
   }
  ],
