--- a/assignment1_colab/assignment1/softmax.ipynb
+++ b/assignment1_colab/assignment1/softmax.ipynb
@@ -2,31 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "149d5b7e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# This mounts your Google Drive to the Colab VM.\n",
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')\n",
+    "# from google.colab import drive\n",
+    "# drive.mount('/content/drive')\n",
     "\n",
     "# TODO: Enter the foldername in your Drive where you have saved the unzipped\n",
     "# assignment folder, e.g. 'cs231n/assignments/assignment1/'\n",
-    "FOLDERNAME = None\n",
+    "FOLDERNAME = \"assignment1\"\n",
     "assert FOLDERNAME is not None, \"[!] Enter the foldername.\"\n",
     "\n",
     "# Now that we've mounted your Drive, this ensures that\n",
     "# the Python interpreter of the Colab VM can load\n",
     "# python files from within it.\n",
-    "import sys\n",
-    "sys.path.append('/content/drive/My Drive/{}'.format(FOLDERNAME))\n",
+    "# import sys\n",
+    "# sys.path.append('/content/drive/My Drive/{}'.format(FOLDERNAME))\n",
     "\n",
     "# This downloads the CIFAR-10 dataset to your Drive\n",
     "# if it doesn't already exist.\n",
-    "%cd /content/drive/My\\ Drive/$FOLDERNAME/cs231n/datasets/\n",
-    "!bash get_datasets.sh\n",
-    "%cd /content/drive/My\\ Drive/$FOLDERNAME"
+    "# %cd /content/drive/My\\ Drive/$FOLDERNAME/cs231n/datasets/\n",
+    "# !bash get_datasets.sh\n",
+    "# %cd /content/drive/My\\ Drive/$FOLDERNAME"
    ]
   },
   {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ca6cf2d4",
    "metadata": {
     "tags": [
@@ -81,14 +81,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9e9bbbbe",
    "metadata": {
     "tags": [
      "pdf-ignore"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train data shape:  (49000, 3073)\n",
+      "Train labels shape:  (49000,)\n",
+      "Validation data shape:  (1000, 3073)\n",
+      "Validation labels shape:  (1000,)\n",
+      "Test data shape:  (1000, 3073)\n",
+      "Test labels shape:  (1000,)\n",
+      "dev data shape:  (500, 3073)\n",
+      "dev labels shape:  (500,)\n"
+     ]
+    }
+   ],
    "source": [
     "def get_CIFAR10_data(num_training=49000, num_validation=1000, num_test=1000, num_dev=500):\n",
     "    \"\"\"\n",
@@ -97,7 +112,7 @@
     "    SVM, but condensed to a single function.  \n",
     "    \"\"\"\n",
     "    # Load the raw CIFAR-10 data\n",
-    "    cifar10_dir = 'cs231n/datasets/cifar-10-batches-py'\n",
+    "    cifar10_dir = '/home/saad-alam/Documents/AxcelerateAI_workspace/cs321n/cifar-10-batches-py'\n",
     "    \n",
     "    # Cleaning up variables to prevent loading data multiple times (which may cause memory issue)\n",
     "    try:\n",
@@ -169,10 +184,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "25f2e5e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 2.365018\n",
+      "sanity check: 2.302585\n"
+     ]
+    }
+   ],
    "source": [
     "# First implement the naive softmax loss function with nested loops.\n",
     "# Open the file cs231n/classifiers/softmax.py and implement the\n",
@@ -181,8 +205,8 @@
     "from cs231n.classifiers.softmax import softmax_loss_naive\n",
     "import time\n",
     "\n",
-    "# Generate a random softmax weight matrix and use it to compute the loss.\n",
-    "W = np.random.randn(3073, 10) * 0.0001\n",
+    "# Generate a random softmax e_exp_yiweight matrix and use it to compute the loss.\n",
+    "W = np.random.randn(3073 , 10) * 0.0001\n",
     "loss, grad = softmax_loss_naive(W, X_dev, y_dev, 0.0)\n",
     "\n",
     "# As a rough sanity check, our loss should be something close to -log(0.1).\n",
@@ -209,10 +233,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "a8cb3eb1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numerical: -0.241107 analytic: -0.241107, relative error: 2.247900e-07\n",
+      "numerical: 4.942095 analytic: 4.942095, relative error: 1.642509e-08\n",
+      "numerical: 0.409370 analytic: 0.409370, relative error: 5.651022e-08\n",
+      "numerical: 2.893865 analytic: 2.893865, relative error: 2.271686e-08\n",
+      "numerical: 1.860880 analytic: 1.860880, relative error: 7.952629e-09\n",
+      "numerical: 1.572931 analytic: 1.572931, relative error: 4.411564e-08\n",
+      "numerical: -0.456185 analytic: -0.456185, relative error: 1.186665e-07\n",
+      "numerical: 1.230047 analytic: 1.230047, relative error: 2.504512e-10\n",
+      "numerical: -2.018402 analytic: -2.018402, relative error: 8.693429e-09\n",
+      "numerical: -0.522236 analytic: -0.522236, relative error: 8.281550e-08\n",
+      "numerical: -0.859715 analytic: -0.859715, relative error: 4.814471e-08\n",
+      "numerical: -0.435056 analytic: -0.435056, relative error: 6.344959e-08\n",
+      "numerical: -1.559982 analytic: -1.559982, relative error: 1.680170e-08\n",
+      "numerical: -0.956024 analytic: -0.956024, relative error: 7.348358e-09\n",
+      "numerical: 1.998426 analytic: 1.998426, relative error: 3.317628e-08\n",
+      "numerical: -1.605266 analytic: -1.605266, relative error: 1.513989e-08\n",
+      "numerical: 1.825445 analytic: 1.825445, relative error: 3.363343e-08\n",
+      "numerical: -4.550923 analytic: -4.550923, relative error: 4.373075e-10\n",
+      "numerical: 1.972876 analytic: 1.972876, relative error: 4.785855e-08\n",
+      "numerical: -0.219131 analytic: -0.219131, relative error: 2.755854e-07\n"
+     ]
+    }
+   ],
    "source": [
     "# Complete the implementation of softmax_loss_naive and implement a (naive)\n",
     "# version of the gradient that uses nested loops.\n",
@@ -232,10 +283,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "4a4a81d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "naive loss: 2.365018e+00 computed in 0.047724s\n",
+      "vectorized loss: 2.365018e+00 computed in 0.006609s\n",
+      "Loss difference: 0.000000\n",
+      "Gradient difference: 0.000000\n"
+     ]
+    }
+   ],
    "source": [
     "# Now that we have a naive implementation of the softmax loss function and its gradient,\n",
     "# implement a vectorized version in softmax_loss_vectorized.\n",
@@ -293,8 +355,23 @@
     "regularization_strengths = [2.5e4, 5e4]\n",
     "\n",
     "# *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "import itertools\n",
     "\n",
-    "pass\n",
+    "for lr, reg in itertools.product(learning_rates, regularization_strengths):\n",
+    "    # Create Softmax and train it \n",
+    "    softmax = Softmax()\n",
+    "    softmax.train(X_train, y_train, lr, reg, num_iters=1000)\n",
+    "\n",
+    "    # Compute training and validation sets accuracies and append to the dictionary\n",
+    "    y_train_pred, y_val_pred = softmax.predict(X_train), softmax.predict(X_val)\n",
+    "    results[(lr, reg)] = np.mean(y_train == y_train_pred), np.mean(y_val == y_val_pred)\n",
+    "\n",
+    "    # Save if validation accuracy is the best\n",
+    "    if results[(lr, reg)][1] > best_val:\n",
+    "        best_val = results[(lr, reg)][1]\n",
+    "        best_softmax = softmax\n",
+    "\n",
+    "# pass\n",
     "\n",
     "# *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "    \n",
@@ -376,7 +453,25 @@
    "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
