--- a/assignment1_colab/assignment1/two_layer_net.ipynb
+++ b/assignment1_colab/assignment1/two_layer_net.ipynb
@@ -2,32 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d6917607",
    "metadata": {},
    "outputs": [],
    "source": [
     "# This mounts your Google Drive to the Colab VM.\n",
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')\n",
+    "# from google.colab import drive\n",
+    "# drive.mount('/content/drive')\n",
     "\n",
     "# TODO: Enter the foldername in your Drive where you have saved the unzipped\n",
     "# assignment folder, e.g. 'cs231n/assignments/assignment1/'\n",
-    "FOLDERNAME = None\n",
+    "FOLDERNAME = 'assignment1'\n",
     "assert FOLDERNAME is not None, \"[!] Enter the foldername.\"\n",
     "\n",
     "# Now that we've mounted your Drive, this ensures that\n",
     "# the Python interpreter of the Colab VM can load\n",
     "# python files from within it.\n",
-    "import sys\n",
-    "sys.path.append('/content/drive/My Drive/{}'.format(FOLDERNAME))\n",
+    "# import sys\n",
+    "# sys.path.append('/content/drive/My Drive/{}'.format(FOLDERNAME))\n",
     "\n",
     "# This downloads the CIFAR-10 dataset to your Drive\n",
     "# if it doesn't already exist.\n",
-    "%cd /content/drive/My\\ Drive/$FOLDERNAME/cs231n/datasets/\n",
-    "!bash get_datasets.sh\n",
-    "%cd /content/drive/My\\ Drive/$FOLDERNAME"
+    "# %cd /content/drive/My\\ Drive/$FOLDERNAME/cs231n/datasets/\n",
+    "# !bash get_datasets.sh\n",
+    "# %cd /content/drive/My\\ Drive/$FOLDERNAME"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0089f566",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -45,6 +53,7 @@
     "def layer_forward(x, w):\n",
     "  \"\"\" Receive inputs x and weights w \"\"\"\n",
     "  # Do some computations ...\n",
+    "\n",
     "  z = # ... some intermediate value\n",
     "  # Do some more computations ...\n",
     "  out = # the output\n",
@@ -77,8 +86,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a2271e7b",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "61277b4e",
    "metadata": {
     "tags": [
@@ -114,14 +129,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "027b175b",
    "metadata": {
     "tags": [
      "pdf-ignore"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('X_train: ', (49000, 3, 32, 32))\n",
+      "('y_train: ', (49000,))\n",
+      "('X_val: ', (1000, 3, 32, 32))\n",
+      "('y_val: ', (1000,))\n",
+      "('X_test: ', (1000, 3, 32, 32))\n",
+      "('y_test: ', (1000,))\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the (preprocessed) CIFAR10 data.\n",
     "\n",
@@ -143,10 +171,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6d6ebb55",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing affine_forward function:\n",
+      "difference:  9.769848888397517e-10\n"
+     ]
+    }
+   ],
    "source": [
     "# Test the affine_forward function\n",
     "\n",
@@ -160,7 +197,6 @@
     "x = np.linspace(-0.1, 0.5, num=input_size).reshape(num_inputs, *input_shape)\n",
     "w = np.linspace(-0.2, 0.3, num=weight_size).reshape(np.prod(input_shape), output_dim)\n",
     "b = np.linspace(-0.3, 0.1, num=output_dim)\n",
-    "\n",
     "out, _ = affine_forward(x, w, b)\n",
     "correct_out = np.array([[ 1.49834967,  1.70660132,  1.91485297],\n",
     "                        [ 3.25553199,  3.5141327,   3.77273342]])\n",
@@ -181,10 +217,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "3fb353c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing affine_backward function:\n",
+      "dx error:  5.399100368651805e-11\n",
+      "dw error:  9.904211865398145e-11\n",
+      "db error:  2.4122867568119087e-11\n"
+     ]
+    }
+   ],
    "source": [
     "# Test the affine_backward function\n",
     "np.random.seed(231)\n",
@@ -218,10 +265,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "18e3dd7c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.         0.         0.         0.        ]\n",
+      " [0.         0.         0.04545455 0.13636364]\n",
+      " [0.22727273 0.31818182 0.40909091 0.5       ]]\n",
+      "Testing relu_forward function:\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'NoneType' and 'float'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-a6e70cb79d16>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m# Compare your output with ours. The error should be on the order of e-8\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Testing relu_forward function:'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'difference: '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrel_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcorrect_out\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-5-41978332fcd2>\u001b[0m in \u001b[0;36mrel_error\u001b[0;34m(x, y)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mrel_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m   \u001b[0;34m\"\"\" returns relative error \"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmaximum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1e-8\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'NoneType' and 'float'"
+     ]
+    }
+   ],
    "source": [
     "# Test the relu_forward function\n",
     "\n",
@@ -231,6 +301,8 @@
     "correct_out = np.array([[ 0.,          0.,          0.,          0.,        ],\n",
     "                        [ 0.,          0.,          0.04545455,  0.13636364,],\n",
     "                        [ 0.22727273,  0.31818182,  0.40909091,  0.5,       ]])\n",
+    "\n",
+    "# print(_)\n",
     "\n",
     "# Compare your output with ours. The error should be on the order of e-8\n",
     "print('Testing relu_forward function:')\n",
@@ -647,7 +719,25 @@
    "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
