impliment linear classifier extract feature from images and clasify them

--- a/assignment1_colab/assignment1/two_layer_net.ipynb
+++ b/assignment1_colab/assignment1/two_layer_net.ipynb
@@ -1198,12 +1198,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "1d1f87fa",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/saad-alam/Documents/AxcelerateAI_workspace/cs321n/assignment1_colab/assignment1/cs231n/layers.py:822: RuntimeWarning: divide by zero encountered in log\n",
+      "/home/saad-alam/Documents/AxcelerateAI_workspace/cs321n/assignment1_colab/assignment1/cs231n/layers.py:819: RuntimeWarning: overflow encountered in subtract\n",
+      "/home/saad-alam/Documents/AxcelerateAI_workspace/cs321n/assignment1_colab/assignment1/cs231n/layers.py:30: RuntimeWarning: overflow encountered in matmul\n",
+      "  exit()\n",
+      "/home/saad-alam/Documents/AxcelerateAI_workspace/cs321n/assignment1_colab/assignment1/cs231n/layers.py:819: RuntimeWarning: invalid value encountered in subtract\n",
+      "/home/saad-alam/Documents/AxcelerateAI_workspace/cs321n/assignment1_colab/assignment1/cs231n/classifiers/fc_net.py:124: RuntimeWarning: overflow encountered in square\n",
+      "  loss += 0.5 * self.reg * (np.sum(W1**2) + np.sum(W2**2))\n",
+      "/home/saad-alam/anaconda3/lib/python3.8/site-packages/numpy/core/fromnumeric.py:86: RuntimeWarning: overflow encountered in reduce\n",
+      "  return ufunc.reduce(obj, axis, dtype, out, **passkwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lr 3.000000e-04 reg 1.000000e-06 val accuracy: 0.511000\n",
+      "lr 3.000000e-04 reg 1.000000e-05 val accuracy: 0.506000\n",
+      "lr 3.000000e-04 reg 1.000000e-04 val accuracy: 0.522000\n",
+      "lr 3.000000e-04 reg 1.000000e-03 val accuracy: 0.533000\n",
+      "lr 3.000000e-04 reg 1.000000e-02 val accuracy: 0.512000\n",
+      "lr 3.000000e-03 reg 1.000000e-06 val accuracy: 0.278000\n",
+      "lr 3.000000e-03 reg 1.000000e-05 val accuracy: 0.324000\n",
+      "lr 3.000000e-03 reg 1.000000e-04 val accuracy: 0.348000\n",
+      "lr 3.000000e-03 reg 1.000000e-03 val accuracy: 0.355000\n",
+      "lr 3.000000e-03 reg 1.000000e-02 val accuracy: 0.270000\n",
+      "lr 3.000000e-02 reg 1.000000e-06 val accuracy: 0.096000\n",
+      "lr 3.000000e-02 reg 1.000000e-05 val accuracy: 0.149000\n",
+      "lr 3.000000e-02 reg 1.000000e-04 val accuracy: 0.103000\n",
+      "lr 3.000000e-02 reg 1.000000e-03 val accuracy: 0.171000\n",
+      "lr 3.000000e-02 reg 1.000000e-02 val accuracy: 0.131000\n",
+      "best validation accuracy achieved during cross-validation: 0.533000\n"
+     ]
+    }
+   ],
    "source": [
     "best_model = None\n",
     "\n",
