--- a/assignment2/Dropout.ipynb
+++ b/assignment2/Dropout.ipynb
@@ -2,30 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "[!] Enter the foldername.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_97121/1443269846.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# assignment folder, e.g. 'cs231n/assignments/assignment2/'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mFOLDERNAME\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mFOLDERNAME\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"[!] Enter the foldername.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# Now that we've mounted your Drive, this ensures that\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: [!] Enter the foldername."
+     ]
+    }
+   ],
    "source": [
     "# This mounts your Google Drive to the Colab VM.\n",
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')\n",
+    "# from google.colab import drive\n",
+    "# drive.mount('/content/drive')\n",
     "\n",
     "# TODO: Enter the foldername in your Drive where you have saved the unzipped\n",
     "# assignment folder, e.g. 'cs231n/assignments/assignment2/'\n",
-    "FOLDERNAME = None\n",
+    "FOLDERNAME = 'assignment2'\n",
     "assert FOLDERNAME is not None, \"[!] Enter the foldername.\"\n",
     "\n",
     "# Now that we've mounted your Drive, this ensures that\n",
     "# the Python interpreter of the Colab VM can load\n",
     "# python files from within it.\n",
-    "import sys\n",
-    "sys.path.append('/content/drive/My Drive/{}'.format(FOLDERNAME))\n",
+    "# import sys\n",
+    "# sys.path.append('/content/drive/My Drive/{}'.format(FOLDERNAME))\n",
     "\n",
-    "# This downloads the CIFAR-10 dataset to your Drive\n",
-    "# if it doesn't already exist.\n",
-    "%cd /content/drive/My\\ Drive/$FOLDERNAME/cs231n/datasets/\n",
-    "!bash get_datasets.sh\n",
-    "%cd /content/drive/My\\ Drive/$FOLDERNAME"
+    "# # This downloads the CIFAR-10 dataset to your Drive\n",
+    "# # if it doesn't already exist.\n",
+    "# %cd /content/drive/My\\ Drive/$FOLDERNAME/cs231n/datasets/\n",
+    "# !bash get_datasets.sh\n",
+    "# %cd /content/drive/My\\ Drive/$FOLDERNAME"
    ]
   },
   {
@@ -309,7 +321,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
