--- a/assignment2/FullyConnectedNets.ipynb
+++ b/assignment2/FullyConnectedNets.ipynb
@@ -858,11 +858,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lr: 0.00001 ws: 0.02192, reg: 0.00329, kr: 0.85087, acc: 0.09900\n",
+      "lr: 0.00006 ws: 0.01884, reg: 0.09282, kr: 0.81899, acc: 0.23400\n",
+      "lr: 0.00002 ws: 0.01785, reg: 0.00684, kr: 0.76575, acc: 0.14800\n",
+      "lr: 0.00001 ws: 0.02261, reg: 0.00758, kr: 0.79897, acc: 0.12800\n",
+      "lr: 0.00012 ws: 0.02643, reg: 0.00190, kr: 0.75616, acc: 0.26600\n",
+      "lr: 0.00062 ws: 0.01115, reg: 0.01825, kr: 0.87869, acc: 0.30900\n",
+      "lr: 0.00004 ws: 0.01366, reg: 0.01312, kr: 0.70458, acc: 0.19600\n",
+      "lr: 0.00012 ws: 0.01218, reg: 0.26726, kr: 0.75465, acc: 0.25300\n",
+      "lr: 0.00003 ws: 0.02436, reg: 0.12784, kr: 0.77714, acc: 0.16300\n",
+      "lr: 0.00007 ws: 0.01323, reg: 0.01854, kr: 0.71713, acc: 0.25000\n",
+      "lr: 0.00001 ws: 0.01223, reg: 0.00499, kr: 0.85592, acc: 0.13900\n",
+      "lr: 0.00042 ws: 0.03075, reg: 0.39071, kr: 0.73829, acc: 0.18900\n",
+      "lr: 0.00002 ws: 0.02806, reg: 0.30032, kr: 0.79166, acc: 0.12000\n",
+      "lr: 0.00002 ws: 0.01444, reg: 0.08091, kr: 0.88522, acc: 0.15900\n",
+      "lr: 0.00006 ws: 0.01255, reg: 0.00381, kr: 0.80212, acc: 0.28600\n",
+      "lr: 0.00003 ws: 0.02181, reg: 0.00690, kr: 0.73497, acc: 0.17800\n",
+      "lr: 0.00001 ws: 0.01117, reg: 0.00883, kr: 0.78754, acc: 0.18100\n",
+      "lr: 0.00002 ws: 0.02134, reg: 0.40109, kr: 0.83216, acc: 0.12800\n",
+      "lr: 0.00014 ws: 0.01027, reg: 0.01928, kr: 0.84532, acc: 0.25900\n",
+      "lr: 0.00009 ws: 0.01340, reg: 0.00531, kr: 0.75085, acc: 0.24300\n",
+      "lr: 0.00019 ws: 0.01205, reg: 0.87620, kr: 0.84331, acc: 0.21300\n",
+      "lr: 0.00005 ws: 0.02859, reg: 0.23242, kr: 0.87259, acc: 0.10100\n",
+      "lr: 0.00083 ws: 0.01363, reg: 0.00254, kr: 0.83173, acc: 0.34600\n",
+      "lr: 0.00026 ws: 0.01463, reg: 0.87763, kr: 0.73763, acc: 0.23900\n",
+      "lr: 0.00030 ws: 0.01702, reg: 0.16542, kr: 0.84353, acc: 0.28700\n",
+      "lr: 0.00003 ws: 0.02235, reg: 0.00823, kr: 0.85998, acc: 0.17600\n",
+      "lr: 0.00083 ws: 0.01988, reg: 0.79329, kr: 0.85256, acc: 0.26600\n",
+      "lr: 0.00068 ws: 0.01023, reg: 0.08374, kr: 0.86011, acc: 0.31400\n",
+      "lr: 0.00001 ws: 0.01402, reg: 0.38745, kr: 0.81658, acc: 0.13100\n",
+      "lr: 0.00006 ws: 0.03027, reg: 0.39360, kr: 0.82064, acc: 0.11900\n",
+      "Best validation accuracy using a small dataset: 0.346\n",
+      "\n",
+      "Training with best parameters...\n",
+      "Best validation accuracy using full dataset: 0.545\n"
+     ]
+    }
+   ],
    "source": [
     "best_model = None\n",
     "\n",
@@ -957,9 +998,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation set accuracy:  0.533\n",
+      "Test set accuracy:  0.511\n"
+     ]
+    }
+   ],
    "source": [
     "y_test_pred = np.argmax(best_model.loss(data['X_test']), axis=1)\n",
     "y_val_pred = np.argmax(best_model.loss(data['X_val']), axis=1)\n",
