--- a/assignment2/PyTorch.ipynb
+++ b/assignment2/PyTorch.ipynb
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "pdf-ignore-input"
@@ -310,10 +310,15 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([64, 10])\n"
+     "ename": "NameError",
+     "evalue": "name 'torch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/saadalam/Desktop/assignment2_colab/assignment2/PyTorch.ipynb Cell 13\u001b[0m line \u001b[0;36m4\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bsaad-global-m4/home/saadalam/Desktop/assignment2_colab/assignment2/PyTorch.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=44'>45</a>\u001b[0m     scores \u001b[39m=\u001b[39m two_layer_fc(x, [w1, w2])\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bsaad-global-m4/home/saadalam/Desktop/assignment2_colab/assignment2/PyTorch.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=45'>46</a>\u001b[0m     \u001b[39mprint\u001b[39m(scores\u001b[39m.\u001b[39msize())  \u001b[39m# you should see [64, 10]\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Bsaad-global-m4/home/saadalam/Desktop/assignment2_colab/assignment2/PyTorch.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=47'>48</a>\u001b[0m two_layer_fc_test()\n",
+      "\u001b[1;32m/home/saadalam/Desktop/assignment2_colab/assignment2/PyTorch.ipynb Cell 13\u001b[0m line \u001b[0;36m4\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bsaad-global-m4/home/saadalam/Desktop/assignment2_colab/assignment2/PyTorch.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=39'>40</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtwo_layer_fc_test\u001b[39m():\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bsaad-global-m4/home/saadalam/Desktop/assignment2_colab/assignment2/PyTorch.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=40'>41</a>\u001b[0m     hidden_layer_size \u001b[39m=\u001b[39m \u001b[39m42\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Bsaad-global-m4/home/saadalam/Desktop/assignment2_colab/assignment2/PyTorch.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=41'>42</a>\u001b[0m     x \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mzeros((\u001b[39m64\u001b[39m, \u001b[39m50\u001b[39m), dtype\u001b[39m=\u001b[39mdtype)  \u001b[39m# minibatch size 64, feature dimension 50\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bsaad-global-m4/home/saadalam/Desktop/assignment2_colab/assignment2/PyTorch.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=42'>43</a>\u001b[0m     w1 \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mzeros((\u001b[39m50\u001b[39m, hidden_layer_size), dtype\u001b[39m=\u001b[39mdtype)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bsaad-global-m4/home/saadalam/Desktop/assignment2_colab/assignment2/PyTorch.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=43'>44</a>\u001b[0m     w2 \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mzeros((hidden_layer_size, \u001b[39m10\u001b[39m), dtype\u001b[39m=\u001b[39mdtype)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
      ]
     }
    ],
@@ -424,8 +429,10 @@
     "    # TODO: Implement the forward pass for the three-layer ConvNet.                #\n",
     "    ################################################################################\n",
     "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
-    "\n",
-    "    pass\n",
+    "    x = F.relu(F.conv2d(x, conv_w1, conv_b1, padding=2))\n",
+    "    x = F.relu(F.conv2d(x, conv_w2, conv_b2, padding=1))\n",
+    "    scores = flatten(x).mm(fc_w) + fc_b\n",
+    "    # pass\n",
     "\n",
     "    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "    ################################################################################\n",
@@ -1265,7 +1272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
