--- a/assignment2/PyTorch.ipynb
+++ b/assignment2/PyTorch.ipynb
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "tags": [
      "pdf-ignore-input"
@@ -676,9 +676,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 0, loss = 3.3126\n",
+      "Checking accuracy on the val set\n",
+      "Got 152 / 1000 correct (15.20%)\n",
+      "\n",
+      "Iteration 100, loss = 2.3338\n",
+      "Checking accuracy on the val set\n",
+      "Got 320 / 1000 correct (32.00%)\n",
+      "\n",
+      "Iteration 200, loss = 2.8596\n",
+      "Checking accuracy on the val set\n",
+      "Got 356 / 1000 correct (35.60%)\n",
+      "\n",
+      "Iteration 300, loss = 1.9028\n",
+      "Checking accuracy on the val set\n",
+      "Got 406 / 1000 correct (40.60%)\n",
+      "\n",
+      "Iteration 400, loss = 1.7738\n",
+      "Checking accuracy on the val set\n",
+      "Got 422 / 1000 correct (42.20%)\n",
+      "\n",
+      "Iteration 500, loss = 1.5297\n",
+      "Checking accuracy on the val set\n",
+      "Got 433 / 1000 correct (43.30%)\n",
+      "\n",
+      "Iteration 600, loss = 1.7838\n",
+      "Checking accuracy on the val set\n",
+      "Got 439 / 1000 correct (43.90%)\n",
+      "\n",
+      "Iteration 700, loss = 1.8491\n",
+      "Checking accuracy on the val set\n",
+      "Got 443 / 1000 correct (44.30%)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "hidden_layer_size = 4000\n",
     "learning_rate = 1e-2\n",
@@ -710,11 +749,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "test": "barebones_accuracy"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 0, loss = 3.8042\n",
+      "Checking accuracy on the val set\n",
+      "Got 124 / 1000 correct (12.40%)\n",
+      "\n",
+      "Iteration 100, loss = 1.9254\n",
+      "Checking accuracy on the val set\n",
+      "Got 361 / 1000 correct (36.10%)\n",
+      "\n",
+      "Iteration 200, loss = 1.8429\n",
+      "Checking accuracy on the val set\n",
+      "Got 415 / 1000 correct (41.50%)\n",
+      "\n",
+      "Iteration 300, loss = 1.9026\n",
+      "Checking accuracy on the val set\n",
+      "Got 417 / 1000 correct (41.70%)\n",
+      "\n",
+      "Iteration 400, loss = 1.5542\n",
+      "Checking accuracy on the val set\n",
+      "Got 443 / 1000 correct (44.30%)\n",
+      "\n",
+      "Iteration 500, loss = 1.7098\n",
+      "Checking accuracy on the val set\n",
+      "Got 449 / 1000 correct (44.90%)\n",
+      "\n",
+      "Iteration 600, loss = 1.7093\n",
+      "Checking accuracy on the val set\n",
+      "Got 472 / 1000 correct (47.20%)\n",
+      "\n",
+      "Iteration 700, loss = 1.4501\n",
+      "Checking accuracy on the val set\n",
+      "Got 482 / 1000 correct (48.20%)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "learning_rate = 3e-3\n",
     "\n",
